part2 is complete

--- a/interpreter/ruslan/编写一个简单的解释器02.md
+++ b/interpreter/ruslan/编写一个简单的解释器02.md
@@ -12,9 +12,9 @@
 
 今天我将会展示一个基于Part1文章中算术计算器的全新版本，它将包括下面的功能：
 
-1，处理输入文本中包含的空白符
-2，处理输入文本中的多于一位的数字
-3，支持两个整数进行减法运算（之前只支持处理加法运算）
+1，处理输入文本中包含的空白符 <br/>
+2，处理输入文本中的多于一位的数字 <br/>
+3，支持两个整数进行减法运算（之前只支持处理加法运算）<br/>
 
 下面就是可以做到上面这些要求的全新版本算术计算器的源代码：
 
@@ -193,6 +193,35 @@ calc>
 1，get_next_token方法做了一些重构，向前移动pos指针的逻辑被抽取成单独的advance方法。<br/>
 2，添加了两个方法：skip_whitespace方法用于处理空格字符，integer方法用于处理输入中的多位整数。<br/>
 3，除了INTEGER -> PLUS -> INTEGER模式之外，expr方法还可以识别INTEGER -> MINUS -> INTEGER模式，并且在识别之后可以根据匹配的模式进行加法或减法运算。<br/>
+
+在Part1中，你学到了两个重要的概念，名为Token和词法分析器，今天我们来简单的谈一谈语义，解析和解析器。
+
+你已经知道了Token。为了让我完成对Token的讨论，需要再来了解一下语义（lexeme）。什么是语义？ 语义是一系列形成Token的字符。在下面的图片中，你可以看到Token和语义的一些示例，希望这能使它们之间的关系变得清晰：
+
+![part2_lexemes](images/part2/part2_lexemes.png)
+
+现在，还记得我们的朋友，expr方法吗？我之前说过，这就是算术表达式的解释实际发生的地方。但在你能解释一个表达式之前，你首先需要识别它是什么类型的短语，例如，它是加法还是减法。expr方法的本质是：它从get_next_token方法中获取标记流中的结构，然后解释已识别的短语，生成算术表达式的结果。
+
+从Token流中查找短语类型的过程，或换句话说，识别Token流中的短语的过程称为解析。解释器或编译器中执行该功能的的部分称为解析器。
+
+所以现在你知道expr方法是你的解释器的一部分，并且解析和解释都在这里发生，  expr方法首先尝试从Token流中识别（解析）INTEGER -> PLUS -> INTEGER或INTEGER -> MINUS -> INTEGER短语，并且在成功识别（解析）其中一个短语之后，解释它并将两个整数的相加或相减的结果返回给调用者。
+
+现在又到了我们做练习的时间了。
+
+![part2_exercises](images/part2/part2_exercises.png)
+
+1，扩展计算器以处理两个整数的乘法 <br/>
+2，扩展计算器以处理两个整数的除法 <br/>
+3，修改代码以解释包含任意数量的加法和减法的表达式，例如“9 - 5 + 3 + 11” <br/>
+
+检测下今天的内容是否都明白了：
+
+1，什么是语义 <br/>
+2，在Token流中查找结构的过程叫什么，换句话说，识别该Token流中某个短语的过程叫什么？ <br/>
+3，解释器（编译器）中执行解析的部分叫什么？ <br/>
+
+我希望你喜欢今天的内容。在本系列的下一篇文章中，我们将扩展计算器以处理更复杂的算术表达式。敬请关注。
+
 
 
 
